# cocaine-plugins

debian/: changelog  control  libcocaine-plugin-unicat-dev.install
docker/: isolate.cpp  isolate.hpp
node/include/cocaine/api/: isolate.hpp
node/include/cocaine/detail/service/node/: isometrics.hpp
node/include/cocaine/idl/: isolate.hpp  node.hpp
node/src/: node.cpp
node/src/isolate/: external.cpp  process.cpp
node/src/node/: app.cpp  engine.cpp  engine.hpp  error.cpp  isometrics.cpp  isometrics.hpp  pool_observer.hpp
node/tests/: isolate_mock.cpp
unicat/: CMakeLists.txt
unicat/include/cocaine/auth/: metainfo.hpp
unicat/include/cocaine/detail/: forwards.hpp
unicat/include/cocaine/idl/: unicat.hpp  unicorn.hpp
unicat/include/cocaine/service/: unicat.hpp
unicat/src/: auth_cache.hpp  completion.cpp  completion.hpp  metainfo.cpp  module.cpp  unicat.cpp
unicat/src/auth/: rights.hpp
unicat/src/backend/: backend.hpp  unicorn.cpp
unicat/src/backends/: backend.cpp  backend.hpp  fabric.cpp  fabric.hpp  storage.cpp  storage.hpp  unicorn.cpp  unicorn.hpp
unicat/src/detail/: autobind.hpp
unicat/tests/: load.py
unicorn/include/cocaine/api/v15/: unicorn.hpp
unicorn/include/cocaine/idl/: unicorn.hpp
unicorn/src/authorization/: unicorn.cpp
unicorn/src/service/: unicorn.cpp
uniresis/include/cocaine/idl/: uniresis.hpp
uniresis/include/cocaine/service/: uniresis.hpp
uniresis/src/: uniresis.cpp
